--- a/Cerestial_rag.ipynb
+++ b/Cerestial_rag.ipynb
@@ -38,11 +38,77 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
-        "id": "SARNqNWDq6Bk"
+        "id": "SARNqNWDq6Bk",
+        "outputId": "6cb028ee-9bfc-484d-c214-e99630455f66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pip/_internal/cli/base_command.py\", line 179, in exc_logging_wrapper\n",
+            "    status = run_func(*args)\n",
+            "             ^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pip/_internal/cli/req_command.py\", line 67, in wrapper\n",
+            "    return func(self, options, args)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pip/_internal/commands/install.py\", line 447, in run\n",
+            "    conflicts = self._determine_conflicts(to_install)\n",
+            "                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pip/_internal/commands/install.py\", line 578, in _determine_conflicts\n",
+            "    return check_install_conflicts(to_install)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pip/_internal/operations/check.py\", line 101, in check_install_conflicts\n",
+            "    package_set, _ = create_package_set_from_installed()\n",
+            "                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pip/_internal/operations/check.py\", line 42, in create_package_set_from_installed\n",
+            "    dependencies = list(dist.iter_dependencies())\n",
+            "                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pip/_internal/metadata/importlib/_dists.py\", line 225, in iter_dependencies\n",
+            "    elif not extras and req.marker.evaluate({\"extra\": \"\"}):\n",
+            "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pip/_vendor/packaging/markers.py\", line 310, in evaluate\n",
+            "    current_environment = cast(\"dict[str, str]\", default_environment())\n",
+            "                                                 ^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pip/_vendor/packaging/markers.py\", line 255, in default_environment\n",
+            "    \"python_version\": \".\".join(platform.python_version_tuple()[:2]),\n",
+            "                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "KeyboardInterrupt\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/bin/pip3\", line 10, in <module>\n",
+            "    sys.exit(main())\n",
+            "             ^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pip/_internal/cli/main.py\", line 80, in main\n",
+            "    return command.main(cmd_args)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pip/_internal/cli/base_command.py\", line 100, in main\n",
+            "    return self._main(args)\n",
+            "           ^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pip/_internal/cli/base_command.py\", line 232, in _main\n",
+            "    return run(options, args)\n",
+            "           ^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pip/_internal/cli/base_command.py\", line 215, in exc_logging_wrapper\n",
+            "    logger.critical(\"Operation cancelled by user\")\n",
+            "  File \"/usr/lib/python3.11/logging/__init__.py\", line 1535, in critical\n",
+            "    if self.isEnabledFor(CRITICAL):\n",
+            "       ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/lib/python3.11/logging/__init__.py\", line 1734, in isEnabledFor\n",
+            "    def isEnabledFor(self, level):\n",
+            "\n",
+            "KeyboardInterrupt\n",
+            "^C\n"
+          ]
+        }
+      ],
       "source": [
         "! pip install --q -U athina langchain-weaviate"
       ]
@@ -59,7 +125,7 @@
       "metadata": {
         "id": "xqGvkL6TrZcZ"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -81,7 +147,7 @@
       "metadata": {
         "id": "qLfaQO3Krzts"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -95,7 +161,7 @@
       "metadata": {
         "id": "WEa2xJmBr339"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -109,7 +175,7 @@
       "metadata": {
         "id": "6VPx8W_kr7T_"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -129,7 +195,7 @@
         "from weaviate.classes.init import Auth\n",
         "import os\n",
         "\n",
-        "wcd_url = 'your_url'\n",
+        "wcd_url = 'https://ti3siko2twke7knxwsgwog.c0.us-east1.gcp.weaviate.cloud'\n",
         "\n",
         "client = weaviate.connect_to_weaviate_cloud(\n",
         "    cluster_url=wcd_url,\n",
@@ -140,7 +206,7 @@
       "metadata": {
         "id": "I7VqD_cdhASC"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -153,35 +219,33 @@
       "metadata": {
         "id": "r0_LpjKchFEJ"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# checking similarity search\n",
-        "vectorstore.similarity_search(\"world war II\", k=3)"
+        "vectorstore.similarity_search(\"world war II\", k=1)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fmgD1vmarOEe",
-        "outputId": "7615a067-4da3-4797-e77b-822e06dcc959"
+        "outputId": "cbe16ea0-55a3-430c-8236-f25b75c2bf7d"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[Document(metadata={'source': './context.csv', 'row': 36.0}, page_content='context: [\"The European theatre of World War II was one of the two main theatres of combat during World War II. It saw heavy fighting across Europe for almost six years, starting with Germany\\'s invasion of Poland on 1 September 1939 and ending with the Western Allies conquering most of Western Europe, the Soviet Union conquering most of Eastern Europe and Germany\\'s unconditional surrender on 8 May 1945 although fighting continued elsewhere in Europe until 25 May. On 5 June 1945, the Berlin'),\n",
-              " Document(metadata={'source': './context.csv', 'row': 59.0}, page_content='war to end all wars\" due to their perception of its then-unparalleled scale, devastation, and loss of life. After World War II\\''),\n",
-              " Document(metadata={'source': './context.csv', 'row': 59.0}, page_content='similarly wrote, \"Some wars name themselves. This is the Great War.\" Contemporary Europeans also referred to it as \"the war to end war\" and it was also described as \"the war to end all wars\" due to their perception of its then-unparalleled scale, devastation, and loss of life. After World War II began in 1939, the terms (often abbreviated as WWI or WW1) became more standard, with British Empire historians, including Canadians, favouring \"The First World War\" and Americans \"World War I\".\\\\n\\\\n\\\\n==')]"
+              "[]"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 28
         }
       ]
     },
